# paralleliser

./: .gitignore  Paralleliser.hs  README  paralleliser.cabal
