name:                paralleliser
version:             0.1
synopsis:            An Automatic Parallelisation Technique for Haskell
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Michael Dever
maintainer:          michael.dever2@mail.dcu.ie
-- copyright:           
category:            Concurrency
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.14

library
  exposed-modules:     Paralleliser
  -- other-modules:       
  other-extensions:    NoMonomorphismRestriction
  build-depends:       base >=4.6, language-core == 0.1, partitioner == 0.1, haskell-src-exts == 1.15.0
  -- hs-source-dirs:      
  default-language:    Haskell2010